test2-2023-09-29.log
regress/test2.fir:247424:17: error: use of unknown declaration 'validif'
    tmp20070 <= validif(head(UInt<3>(6), 1), SInt<24>("b-11111101000010001010101"))
                ^
===-------------------------------------------------------------------------===
                         ... Execution time report ...
===-------------------------------------------------------------------------===
  Total Execution Time: 1.2786 seconds

  ----Wall Time----  ----Name----
    1.2770 ( 99.9%)  FIR Parser
    0.0000 (  0.0%)    Parse annotations
    0.0000 (  0.0%)    Parse OMIR
    1.1889 ( 93.0%)    Parse modules
    0.0016 (  0.1%)  Rest
    1.2786 (100.0%)  Total

{
  totalTime: 1.293,
  maxMemory: 171233280
}
